# llama-metal

./: .gitignore  CLAUDE.md  Makefile  README.md  convert_hf_to_gguf.py  debug_delta_net.cpp  test_cont_reshape.cpp  test_fused_kernel.cpp  test_model_flow.cpp  torch_compat.py
.work/: qwen-optimization-summary.md
common/: arg.cpp  common.cpp  common.h
docs/: gpu-architecture-map.md
docs/metal-amd/: ARCHITECTURE.md  BACKLOG.md  README.md  REFACTOR-005-PLAN.md  msl-portability-tiers.md  no-silent-fallback.md
ggml/include/: ggml-backend.h  ggml-device-profile.h  ggml.h
ggml/src/: ggml-backend.cpp  ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp  ops.h
ggml/src/ggml-metal/: CMakeLists.txt  ggml-metal-context.h  ggml-metal-context.m  ggml-metal-device.h  ggml-metal-device.m  ggml-metal-impl.h  ggml-metal-ops.h  ggml-metal.cpp
ggml/src/ggml-metal/activation/: activation.metal
ggml/src/ggml-metal/conv/: conv.metal  ops-conv.cpp
ggml/src/ggml-metal/copy/: copy.metal  ops-copy.cpp  pipeline-copy.cpp
ggml/src/ggml-metal/device/: ggml-metal-device.cpp
ggml/src/ggml-metal/fft/: fft.metal  ops-fft.cpp  pipeline-fft.cpp
ggml/src/ggml-metal/flash-attn/: flash-attn-intel.metal  flash-attn-scalar.metal  flash-attn-simdgroup.metal  ops-flash-attn.cpp  pipeline-flash-attn.cpp
ggml/src/ggml-metal/kernels/: 00-common.metal
ggml/src/ggml-metal/matmul/: dequant.metal  dispatch.cpp  kernel-mm.metal  kernel-scalar-basic.metal  kernel-scalar-kquant.metal  kernel-scalar.metal  kernel-tiled-loaders-iq.metal  kernel-tiled-loaders-kquant.metal  kernel-tiled-loaders-qk32.metal  kernel-tiled.metal  pipeline.cpp
ggml/src/ggml-metal/misc/: misc.metal  ops-misc.cpp  pipeline-misc.cpp  pipeline-pool.cpp  pipeline-sort.cpp  pool.metal  solve-argmax.metal
ggml/src/ggml-metal/norm/: norm.metal  ops-norm.cpp  pipeline-norm.cpp
ggml/src/ggml-metal/ops/: ggml-metal-ops-internal.h  ggml-metal-ops.cpp
ggml/src/ggml-metal/reduction/: ops-reduction.cpp  pipeline-reduction.cpp  reduction.metal
ggml/src/ggml-metal/rope/: ops-rope.cpp  rope.metal
ggml/src/ggml-metal/rows/: pipeline-rows.cpp  rows.metal
ggml/src/ggml-metal/softmax/: ops-softmax.cpp  pipeline-softmax.cpp  softmax.metal
ggml/src/ggml-metal/spatial/: ops-spatial.cpp  pipeline-spatial.cpp  spatial.metal
ggml/src/ggml-metal/ssm/: ops-ssm.cpp  pipeline-ssm.cpp  ssm.metal
ggml/src/ggml-metal/unary/: ops-elementwise.cpp  pipeline-unary.cpp  unary-binary.metal
include/: llama.h
requirements/: requirements-convert_hf_to_gguf.txt
src/: CMakeLists.txt  llama-context.cpp  llama-context.h  llama-cparams.h  llama-graph.cpp  llama-graph.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-router.cpp  llama-kv-router.h  llama-memory-recurrent.cpp  llama-memory.h  llama-model.cpp  llama.cpp
src/models/: kimi-linear.cpp  models.h  qwen35.cpp  qwen35moe.cpp  qwen3next.cpp
src/models/qwen35/: README.md  delta-net-chunking.cpp  delta-net-fused.cpp  delta-net-unfused.cpp  qwen35.cpp
tests/: CMakeLists.txt  test-backend-ops.cpp  test-icb-probe.m  test-kernel-base.h  test-metal-device-fa.cpp  test-mul-mv-simple.metal  test-mul-mv.mm  test-norm.mm  test-reduction.mm  test-rope.mm  test-softmax.mm  test-unary.mm
tools/: CMakeLists.txt
tools/tts/: tts.cpp
tools/tts-daemon/: CMakeLists.txt  tts-daemon.cpp
