set(TARGET llama-tts-daemon)
add_executable(${TARGET} tts-daemon.cpp)
target_link_libraries(${TARGET} PRIVATE llama common ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)
if(APPLE)
    find_library(AUDIOTOOLBOX_FRAMEWORK AudioToolbox)
    if(AUDIOTOOLBOX_FRAMEWORK)
        target_link_libraries(${TARGET} PRIVATE ${AUDIOTOOLBOX_FRAMEWORK})
        target_compile_definitions(${TARGET} PRIVATE HAVE_AUDIOTOOLBOX)
    endif()
endif()
if(LLAMA_TOOLS_INSTALL)
    install(TARGETS ${TARGET} RUNTIME)
endif()
