find_library(FOUNDATION_LIBRARY Foundation REQUIRED)
find_library(METAL_FRAMEWORK    Metal      REQUIRED)
find_library(METALKIT_FRAMEWORK MetalKit   REQUIRED)

message(STATUS "Metal framework found")

# C++ sources — split into ops/ and device/ subdirectories
ggml_add_backend_library(ggml-metal
                         ggml-metal.cpp
                         ggml-metal-device.m
                         ggml-metal-common.cpp
                         ggml-metal-context.m
                         # device/ — pipeline selection (maps ggml ops to MSL kernel names)
                         device/ggml-metal-device.cpp
                         copy/pipeline-copy.cpp
                         rows/pipeline-rows.cpp
                         misc/pipeline-pool.cpp
                         misc/pipeline-sort.cpp
                         misc/pipeline-misc.cpp
                         unary/pipeline-unary.cpp
                         reduction/pipeline-reduction.cpp
                         norm/pipeline-norm.cpp
                         softmax/pipeline-softmax.cpp
                         matmul/pipeline.cpp
                         ssm/pipeline-ssm.cpp
                         flash-attn/pipeline-flash-attn.cpp
                         spatial/pipeline-spatial.cpp
                         fft/pipeline-fft.cpp
                         # ops/ — host-side kernel dispatch (encode commands)
                         ops/ggml-metal-ops.cpp
                         unary/ops-elementwise.cpp
                         reduction/ops-reduction.cpp
                         norm/ops-norm.cpp
                         softmax/ops-softmax.cpp
                         matmul/dispatch.cpp
                         ssm/ops-ssm.cpp
                         flash-attn/ops-flash-attn.cpp
                         rope/ops-rope.cpp
                         conv/ops-conv.cpp
                         spatial/ops-spatial.cpp
                         fft/ops-fft.cpp
                         copy/ops-copy.cpp
                         misc/ops-misc.cpp
                        )

# ops/ and device/ subdirs need to find headers in the parent directory
target_include_directories(ggml-metal PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

target_link_libraries(ggml-metal PRIVATE
                      ${FOUNDATION_LIBRARY}
                      ${METAL_FRAMEWORK}
                      ${METALKIT_FRAMEWORK}
                      )

if (GGML_METAL_NDEBUG)
    add_compile_definitions(GGML_METAL_NDEBUG)
endif()

# Metal shader kernel files — split into kernels/ subdirectory
# Order matters: 00-common.metal must be first (shared helpers/dequant code)
set(METAL_KERNEL_SOURCES
    kernels/00-common.metal
    matmul/dequant.metal
    unary/unary-binary.metal
    activation/activation.metal
    reduction/reduction.metal
    softmax/softmax.metal
    ssm/ssm.metal
    misc/solve-argmax.metal
    norm/norm.metal
    matmul/kernel-scalar-basic.metal
    matmul/kernel-scalar.metal
    matmul/kernel-scalar-kquant.metal
    matmul/kernel-mm.metal
    matmul/kernel-tiled.metal
    rows/rows.metal
    rope/rope.metal
    conv/conv.metal
    spatial/spatial.metal
    fft/fft.metal
    flash-attn/flash-attn-simdgroup.metal
    flash-attn/flash-attn-scalar.metal
    flash-attn/flash-attn-intel.metal
    copy/copy.metal
    misc/pool.metal
    misc/misc.metal
)

set(METALLIB_COMMON "${CMAKE_CURRENT_SOURCE_DIR}/../ggml-common.h")
set(METALLIB_IMPL   "${CMAKE_CURRENT_SOURCE_DIR}/ggml-metal-impl.h")

if (GGML_METAL_EMBED_LIBRARY)
    enable_language(ASM)

    add_compile_definitions(GGML_METAL_EMBED_LIBRARY)

    file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/autogenerated")

    set(METALLIB_EMBED_ASM    "${CMAKE_CURRENT_BINARY_DIR}/autogenerated/ggml-metal-embed.s")
    set(METALLIB_SOURCE_EMBED "${CMAKE_CURRENT_BINARY_DIR}/autogenerated/ggml-metal-embed.metal")

    # Collect absolute paths for DEPENDS
    set(METAL_KERNEL_DEPS "")
    foreach(src ${METAL_KERNEL_SOURCES})
        list(APPEND METAL_KERNEL_DEPS "${CMAKE_CURRENT_SOURCE_DIR}/${src}")
    endforeach()

    # Concatenate all kernel files into a single .metal blob for embedding:
    #   1. Cat 00-common.metal as-is (has the __embed_ggml-common.h__ marker)
    #   2. Cat remaining kernel files, stripping their #include "00-common.metal" lines
    #   3. Inline ggml-common.h at the __embed marker
    #   4. Inline ggml-metal-impl.h at its #include
    #   5. Wrap in .s assembly for .incbin embedding
    add_custom_command(
        OUTPUT "${METALLIB_EMBED_ASM}"
        COMMAND echo "Embedding Metal library from kernels/"
        # Step 1+2: concatenate kernel files, strip #include "00-common.metal" and "dequant.metal"
        COMMAND cat ${METAL_KERNEL_DEPS} | grep -v "^#include \"00-common.metal\"\\|^#include \"dequant.metal\"" > "${METALLIB_SOURCE_EMBED}.tmp"
        # Step 3: inline ggml-common.h
        COMMAND sed -e "/__embed_ggml-common.h__/r ${METALLIB_COMMON}" -e "/__embed_ggml-common.h__/d" < "${METALLIB_SOURCE_EMBED}.tmp" > "${METALLIB_SOURCE_EMBED}.tmp2"
        # Step 4: inline ggml-metal-impl.h
        COMMAND sed -e "/\#include \"ggml-metal-impl.h\"/r ${METALLIB_IMPL}" -e "/\#include \"ggml-metal-impl.h\"/d" < "${METALLIB_SOURCE_EMBED}.tmp2" > "${METALLIB_SOURCE_EMBED}.tmp3"
        # Step 5: inline tiled kernel loader includes
        COMMAND sed -e "/\#include \"kernel-tiled-loaders-qk32.metal\"/r ${CMAKE_CURRENT_SOURCE_DIR}/matmul/kernel-tiled-loaders-qk32.metal" -e "/\#include \"kernel-tiled-loaders-qk32.metal\"/d" -e "/\#include \"kernel-tiled-loaders-kquant.metal\"/r ${CMAKE_CURRENT_SOURCE_DIR}/matmul/kernel-tiled-loaders-kquant.metal" -e "/\#include \"kernel-tiled-loaders-kquant.metal\"/d" -e "/\#include \"kernel-tiled-loaders-iq.metal\"/r ${CMAKE_CURRENT_SOURCE_DIR}/matmul/kernel-tiled-loaders-iq.metal" -e "/\#include \"kernel-tiled-loaders-iq.metal\"/d" < "${METALLIB_SOURCE_EMBED}.tmp3" > "${METALLIB_SOURCE_EMBED}"
        # Step 5: generate .s assembly
        COMMAND echo ".section __DATA,__ggml_metallib"          >  "${METALLIB_EMBED_ASM}"
        COMMAND echo ".globl _ggml_metallib_start"              >> "${METALLIB_EMBED_ASM}"
        COMMAND echo "_ggml_metallib_start:"                    >> "${METALLIB_EMBED_ASM}"
        COMMAND echo .incbin "\"${METALLIB_SOURCE_EMBED}\""     >> "${METALLIB_EMBED_ASM}"
        COMMAND echo ".globl _ggml_metallib_end"                >> "${METALLIB_EMBED_ASM}"
        COMMAND echo "_ggml_metallib_end:"                      >> "${METALLIB_EMBED_ASM}"
        # Cleanup temp files
        COMMAND rm -f "${METALLIB_SOURCE_EMBED}.tmp" "${METALLIB_SOURCE_EMBED}.tmp2" "${METALLIB_SOURCE_EMBED}.tmp3"
        DEPENDS ${METAL_KERNEL_DEPS} ${METALLIB_COMMON} ${METALLIB_IMPL}
                ${CMAKE_CURRENT_SOURCE_DIR}/matmul/kernel-tiled-loaders-qk32.metal
                ${CMAKE_CURRENT_SOURCE_DIR}/matmul/kernel-tiled-loaders-kquant.metal
                ${CMAKE_CURRENT_SOURCE_DIR}/matmul/kernel-tiled-loaders-iq.metal
        COMMENT "Generate assembly for embedded Metal library"
        VERBATIM
    )

    target_sources(ggml-metal PRIVATE "${METALLIB_EMBED_ASM}")
else()
    # Non-embedded path: copy kernel files to bin directory, compile to metallib
    # Copy headers needed by Metal compiler
    configure_file(../ggml-common.h  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ggml-common.h  COPYONLY)
    configure_file(ggml-metal-impl.h ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ggml-metal-impl.h COPYONLY)

    # Copy all kernel files to bin directory
    foreach(src ${METAL_KERNEL_SOURCES})
        get_filename_component(fname ${src} NAME)
        configure_file(${src} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${fname} COPYONLY)
    endforeach()

    # Copy tiled loader include files (not in METAL_KERNEL_SOURCES, inlined via #include)
    configure_file(matmul/kernel-tiled-loaders-qk32.metal   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/kernel-tiled-loaders-qk32.metal   COPYONLY)
    configure_file(matmul/kernel-tiled-loaders-kquant.metal  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/kernel-tiled-loaders-kquant.metal  COPYONLY)
    configure_file(matmul/kernel-tiled-loaders-iq.metal      ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/kernel-tiled-loaders-iq.metal      COPYONLY)

    if (GGML_METAL_SHADER_DEBUG)
        set(XC_FLAGS -fno-fast-math -fno-inline)
    else()
        set(XC_FLAGS -O3)
    endif()

    if (GGML_METAL_MACOSX_VERSION_MIN)
        message(STATUS "Adding  -mmacosx-version-min=${GGML_METAL_MACOSX_VERSION_MIN} flag to metal compilation")
        list   (APPEND XC_FLAGS -mmacosx-version-min=${GGML_METAL_MACOSX_VERSION_MIN})
    endif()

    if (GGML_METAL_STD)
        message(STATUS "Adding  -std=${GGML_METAL_STD} flag to metal compilation")
        list   (APPEND XC_FLAGS -std=${GGML_METAL_STD})
    endif()

    # Concatenate all kernel files into one .metal, strip internal includes, compile
    set(METALLIB_MERGED "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ggml-metal-merged.metal")

    # Collect bin-dir kernel paths for the compile command
    set(METAL_KERNEL_BIN_DEPS "")
    foreach(src ${METAL_KERNEL_SOURCES})
        get_filename_component(fname ${src} NAME)
        list(APPEND METAL_KERNEL_BIN_DEPS "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${fname}")
    endforeach()

    add_custom_command(
        OUTPUT ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/default.metallib
        COMMAND cat ${METAL_KERNEL_BIN_DEPS} | grep -v "^#include \"00-common.metal\"\\|^#include \"dequant.metal\"" > "${METALLIB_MERGED}"
        COMMAND xcrun -sdk macosx metal ${XC_FLAGS}
                -I ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
                -c "${METALLIB_MERGED}" -o - |
                xcrun -sdk macosx metallib - -o ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/default.metallib
        COMMAND rm -f ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ggml-common.h
        COMMAND rm -f "${METALLIB_MERGED}"
        DEPENDS ${METAL_KERNEL_DEPS} ${METALLIB_COMMON}
        COMMENT "Compiling Metal kernels"
        )

    add_custom_target(
        ggml-metal-lib ALL
        DEPENDS ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/default.metallib
        )
endif() # GGML_METAL_EMBED_LIBRARY

if (NOT GGML_METAL_EMBED_LIBRARY)
    # Install kernel files individually
    foreach(src ${METAL_KERNEL_SOURCES})
        install(
            FILES ${src}
            PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
            DESTINATION ${CMAKE_INSTALL_BINDIR})
    endforeach()

    install(
        FILES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/default.metallib
        DESTINATION ${CMAKE_INSTALL_BINDIR}
    )
endif()
